[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereShape" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Core" type="StaticBody" parent="."]

[node name="CSGSphere" type="CSGSphere" parent="Core"]
radius = 2.28333

[node name="CollisionShape" type="CollisionShape" parent="Core"]
shape = SubResource( 1 )

[node name="Ring1" type="KinematicBody" parent="."]

[node name="CSGTorus" type="CSGTorus" parent="Ring1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
inner_radius = 3.0
outer_radius = 4.0

[node name="CollisionShape" type="CollisionShape" parent="Ring1"]
visible = false
shape = SubResource( 2 )

[node name="Ring2" type="KinematicBody" parent="."]

[node name="CSGTorus" type="CSGTorus" parent="Ring2"]
inner_radius = 5.0
outer_radius = 6.0

[node name="CollisionShape" type="CollisionShape" parent="Ring2"]
visible = false
shape = SubResource( 2 )

[node name="Ring3" type="KinematicBody" parent="."]

[node name="CSGTorus" type="CSGTorus" parent="Ring3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
inner_radius = 7.5
outer_radius = 8.5

[node name="CollisionShape" type="CollisionShape" parent="Ring3"]
visible = false
shape = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.61737, 0 )
current = true
fov = 120.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
